# falsy

./: Cargo.toml  README.md
src/: ast.rs  interpreter.rs  main.rs  parser.rs
tests/: samples.rs
tests/samples/: factorial.false  factorial.toml  fib.false  fib.toml  hello_world.toml  operators.false  operators.toml  recursive_fib.false  recursive_fib.toml  simple_lambda.false  simple_lambda.toml  string_escape.false  string_escape.toml
