[package]
edition = "2021"
name = "falsy"
version = "0.0.1"

authors = ["Orvar <orvarsegerstrom@gmail.com>"]
categories = ["simulation"]
description = "False eso-lang interpreter"
homepage = "https://github.com/0rvar/falsy"
keywords = ["false", "interpreter", "binary"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chumsky = "1.0.0-alpha.7"
